--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="description" content="I'm Mohammad H. Maazallahi. In love with software engineering and a bit of math, Wikipedia volunteer!">
         <title>Mikey | Software Developer</title>
 
-        <link rel="stylesheet" href="/src/assets/style.min.css">
+        <link rel="stylesheet" href="/dist/assets/style.min.css">
         <script src="https://kit.fontawesome.com/1f0a5972f7.js" crossorigin="anonymous"></script>
     </head>
     <body>
